--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,8 +3,5 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "nextjs",
-  "nodeVersion": "20.x",
-  "env": {
-    "NEXT_PUBLIC_API_URL": "@next_public_api_url"
-  }
+  "nodeVersion": "20.x"
 }
