chore: add Vercel deployment configuration and documentation
- Updated vercel.json with proper frontend routing configuration
- Created VERCEL_DEPLOYMENT.md with step-by-step deployment guide
- Included environment variable setup instructions
- Added troubleshooting guide for common deployment issues
- Frontend ready for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "nodeVersion": "20.x"
+  "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "frontend/$1"
+    }
+  ]
 }
+
