fix: resolve remaining build and type errors for Next.js compilation
- Fix Table component imports (named exports)
- Add missing getAuditLogs method to content service
- Fix unescaped apostrophes in JSX
- Add 'use client' directives to client components
- Fix type casting for form data with tags
- Add keyExtractor to all Table components

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,7 +14,7 @@
     "strict": false,
     "resolveJsonModule": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "moduleResolution": "node",
     "allowImportingTsExtensions": true,
     "allowJs": true,
