--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.6",
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.9",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -30,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "clsx": "^2.0.0",
+    "dom-helpers": "^6.0.1",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
@@ -43,8 +45,9 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.5.0",
     "recharts": "^2.10.3",
-    "zustand": "^4.4.5",
-    "zod": "^3.22.4"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
